--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,11 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: inherit;
 }
 
+* {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
 @font-face {
   font-family: "Geometria";
   src: url("../fonts/Geometria-Thin.eot");
@@ -314,100 +319,225 @@ html {
   scroll-behavior: smooth;
 }
 
-/*
-@media (max-width: 768px) {
-   .header::before {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(245, 241, 236, 0.442);
-      z-index: 3;
-   }
-
-   .lock {
-      overflow: hidden;
-   }
-
-   .header__menu {
-      position: absolute;
-      flex-direction: column;
-      top: 0;
-      right: -100vw;
-      z-index: 3;
-      transition: all 0.5s ease;
-      overflow-y: auto;
-   }
-
-   .header__menu.active {
-      right: 0;
-   }
-
-   .menu__list {
-      flex-direction: column;
-   }
-
-   .menu__list li a {
-   }
-   .menu__list li {
-   }
-
-   .header__burger {
-      position: relative;
-      display: flex;
-      align-items: center;
-      width: 50px;
-      height: 28px;
-      margin-right: 3px;
-      z-index: 3;
-   }
-
-   .header__burger::after,
-   .header__burger::before {
-      content: "";
-      position: absolute;
-      right: 0;
-      width: 50px;
-      height: 1px;
-      background: #000;
-      transition: all 0.5s ease;
-   }
-
-   .header__burger::before {
-      top: 0px;
-   }
-
-   .header__burger::after {
-      bottom: 0;
-   }
-
-   .header__burger span {
-      display: block;
-      height: 1px;
-      width: 100%;
-      align-self: center;
-      background-color: #000;
-      transition: all 0.5s ease;
-   }
-
-   .header__burger.active::before {
-      top: 18px;
-      transform: rotate(45deg);
-      height: 1px;
-   }
-   .header__burger.active::after {
-      bottom: 9px;
-      transform: rotate(-45deg);
-      height: 1px;
-   }
-
-   .header__burger.active span {
-      transform: scale(0);
-   }
+.header {
+  padding: 35px 0 17px;
+  margin: 0 0 30px 0;
 }
-*/
+.header__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header__logo {
+  -webkit-box-flex: 0 0 calc((187/1112)*100%);
+  -ms-flex: 0 0 calc((187/1112)*100%);
+  flex: 0 0 calc((187/1112)*100%);
+  padding: 0 0 calc((32/1112)*100%) 0;
+  margin: 0 auto 0 0;
+}
+.header__menu {
+  margin: 0 53px 0 0;
+}
+.header__sign {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 16px;
+  line-height: 46px;
+  text-align: center;
+  font-weight: 600;
+}
+@media (max-width: 450px) {
+  .header__sign {
+    font-size: 14px;
+  }
+}
+.header__sign_in {
+  display: block;
+  width: 102px;
+  height: 46px;
+  border: 1px solid #BCD0E5;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 4px;
+  margin: 0 14px 0 0;
+  color: #173A56;
+}
+@media (max-width: 630px) {
+  .header__sign_in {
+    width: 80px;
+    height: 46px;
+  }
+}
+@media (max-width: 450px) {
+  .header__sign_in {
+    width: 60px;
+    height: 46px;
+  }
+}
+.header__sign_in:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+.header__sign_up {
+  display: block;
+  width: 110px;
+  height: 46px;
+  background: #FF9900;
+  border-radius: 4px;
+  color: #FFFFFF;
+}
+@media (max-width: 630px) {
+  .header__sign_up {
+    width: 80px;
+    height: 46px;
+  }
+}
+@media (max-width: 450px) {
+  .header__sign_up {
+    width: 60px;
+    height: 46px;
+  }
+}
+.header__sign_up:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.menu__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.menu__list li {
+  margin: 0 26px 0 0;
+}
+.menu__list li:last-child {
+  margin: 0 0 0 0;
+}
+.menu__link {
+  position: relative;
+  font-size: 14px;
+  line-height: 28px;
+  color: #2F281E;
+}
+.menu__link:hover::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #2F281E;
+}
+
+@media (max-width: 768px) {
+  .lock {
+    overflow: hidden;
+  }
+
+  .header__menu {
+    position: absolute;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    top: -100%;
+    z-index: 3;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    overflow-y: auto;
+    background: white;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+  }
+
+  .header__menu.active {
+    top: 0;
+  }
+
+  .menu__link {
+    font-size: 25px;
+    line-height: 40px;
+  }
+
+  .menu__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .header__burger {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 50px;
+    height: 28px;
+    margin-right: 3px;
+    z-index: 3;
+    margin: 0 auto;
+  }
+
+  .header__burger::after,
+.header__burger::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    width: 50px;
+    height: 1px;
+    background: #000;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+  }
+
+  .header__burger::before {
+    top: 0px;
+  }
+
+  .header__burger::after {
+    bottom: 0;
+  }
+
+  .header__burger span {
+    display: block;
+    height: 1px;
+    width: 100%;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    background-color: #000;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+  }
+
+  .header__burger.active::before {
+    top: 18px;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    height: 1px;
+  }
+
+  .header__burger.active::after {
+    bottom: 9px;
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    height: 1px;
+  }
+
+  .header__burger.active span {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+}
 .ibg {
   background-position: center;
   background-size: cover;
@@ -425,13 +555,172 @@ html {
   visibility: hidden;
 }
 
+:root {
+  --fontsize1: 44px;
+  --fontsize2: 18px;
+  --fontsize3: 16px;
+}
+
+@media (max-width: 768px) {
+  :root {
+    --fontsize1: 36px;
+    --fontsize2: 16px;
+    --fontsize3: 14px;
+  }
+}
+@media (max-width: 375px) {
+  :root {
+    --fontsize1: 32px;
+    --fontsize2: 14px;
+    --fontsize3: 14px;
+  }
+}
 .wrapper {
   overflow: hidden;
   min-height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .container {
-  max-width: 1230px;
+  max-width: 1142px;
   padding: 0px 15px;
   margin: 0 auto;
+}
+
+.main {
+  -webkit-box-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+}
+
+.first-screen__body {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.first-screen__offer {
+  max-width: 462px;
+  padding: 0 0px 0 8px;
+}
+.first-screen__image {
+  -webkit-box-flex: 0 0 calc((604/1112)*100%);
+  -ms-flex: 0 0 calc((604/1112)*100%);
+  flex: 0 0 calc((604/1112)*100%);
+  padding: 0 0 calc((495/1112)*100%) 0;
+  margin: 0 -20px 0 0;
+}
+@media (max-width: 630px) {
+  .first-screen__image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 300px;
+    height: 247px;
+    padding: 0;
+    z-index: -1;
+    opacity: 0.3;
+  }
+}
+
+.offer__title {
+  font-weight: 700;
+  font-size: var(--fontsize1);
+  line-height: 123%;
+  color: #2F281E;
+  margin: 0 0 30px 0;
+}
+@media (max-width: 375px) {
+  .offer__title {
+    margin: 0 0 20px 0;
+  }
+}
+.offer__text {
+  font-size: var(--fontsize2);
+  line-height: 156%;
+  color: #544837;
+  margin: 0 0 53px 0;
+}
+@media (max-width: 375px) {
+  .offer__text {
+    margin: 0 0 30px 0;
+  }
+}
+.offer__actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (max-width: 768px) {
+  .offer__actions {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+.offer__actions_btn {
+  margin: 0 30px 0 0;
+}
+@media (max-width: 768px) {
+  .offer__actions_btn {
+    margin: 0 0 20px 0;
+  }
+}
+.offer__actions_link img {
+  margin: 0 8.5px 0 0px;
+}
+.offer__actions_link span {
+  -ms-flex-line-pack: center;
+      align-content: center;
+  font-weight: 600;
+  font-size: var(--fontsize3);
+  line-height: 20px;
+  text-decoration: underline;
+  color: #FF9900;
+}
+.offer__actions_link span:hover {
+  text-decoration: none;
+}
+
+.button {
+  display: block;
+  width: 175px;
+  height: 53px;
+  background: #FF9900;
+  border-radius: 4px;
+  text-align: center;
+  font-weight: 700;
+  font-size: var(--fontsize3);
+  line-height: 53px;
+  color: #FFFFFF;
+}
+.button:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+@media (max-width: 768px) {
+  .button {
+    width: 130px;
+    height: 40px;
+    line-height: 40px;
+  }
 }
