--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -57,7 +57,8 @@ $minwidth: 320px;
    --fontsize1: 44px;
    --fontsize2: 18px;
    --fontsize3: 16px;
-
+   --fontsize4: 22px;
+   --fontsize5: 36px;
 }
 
 @media (max-width: 768px) {
@@ -65,6 +66,8 @@ $minwidth: 320px;
    --fontsize1: 36px;
    --fontsize2: 16px;
    --fontsize3: 14px;
+   --fontsize4: 18px;
+   --fontsize5: 32px;
    }
 }
 
@@ -73,6 +76,8 @@ $minwidth: 320px;
    --fontsize1: 32px;
    --fontsize2: 14px;
    --fontsize3: 14px;
+   --fontsize4: 16px;
+   --fontsize5: 28px;
    }
 }
 
@@ -98,7 +103,7 @@ $minwidth: 320px;
    //
 
    .first-screen {
-
+ margin:  0 0 111.17px;
 		&__body {
          position: relative;
          @include flexbox();
@@ -212,6 +217,221 @@ align-items: center;
       line-height: 40px;
    }
 }
+//=============================================
+
+.design-tools {
+ margin: 0 0 125px 0;
+   &__body {
+      @include flexbox();
+      flex-direction: column;
+      align-items: center;
+   }
+
+   &__title {
+      max-width: 539px;
+      margin:  0 auto 54px;
+   }
+
+   &__вenefits {
+      margin: 0 0 30px 0
+   }
+
+   &__button {
+      position: relative;
+      z-index: 3;
+   }
+}
+.container-design-tools {
+   max-width: 1400px;
+   padding: 0px 0 90px;
+   overflow: hidden;
+   position: relative;
+   margin: 0 auto;
+}
+.background{
+   position: absolute;
+   top: 0;
+   left: 50%;
+   transform: translate(-50%,0);
+   background: linear-gradient(179.59deg, rgba(255, 244, 229, 0.0001) 0.35%, rgba(255, 229, 210, 0.629261) 99.63% );
+   border-radius: 0 0 200% 200%;
+   width:  1450px;
+   height: 100%;
+   margin: 0 auto;
+}
+.section-title {
+   font-weight: 700;
+font-size: var(--fontsize5);
+line-height:150%;
+text-align: center;
+
+color: #2F281E;
+}
+.disgn-tools {
+
+
+}
+.вenefits {
+   @include flexbox();
+   flex-wrap: wrap;
+   justify-content: space-between;
+   padding: 0 0 0 22px;
+   @media (max-width:962px) {
+     max-width: 500px; 
+     justify-content: center;
+   } 
+   &__item {
+      @include flex(0 0 214px);
+      @media (max-width:962px) {
+         margin: 0 0 20px 0;
+       } 
+   }
+}
+.item {
+
+   &__icon {
+      margin:  0 0 30px 0;
+   }
+
+   &__title {
+   }
+
+   &__text {
+   }
+}
+.section-subtitle{
+   font-weight: 600;
+font-size: var(--fontsize4);
+line-height: 33px;
+color: #2F281E;
+margin: 0 0 14px 0;
+}
+.text {
+   font-weight: 500;
+font-size: var(--fontsize3);
+line-height: 162%;
+color: #544837;
+}
+.button {
+}
+
+//================================
+.articles {
+
+   &__body {
+      position: relative;
+      @include flexbox();
+      justify-content: space-between;
+      margin: 0 0 85px 0;
+      &:nth-child(2){
+         padding: 0 0 0 10px;
+         margin: 0 0 118px 0;
+
+      }
+   }
+
+   &__content {
+      @include flex(0 0 calc((475/1112)*100%));
+      padding: 30px 0 0 10px;
+      @media (max-width:830px){
+         @include flex(0 0 100%);
+      }
+   }
+   
+
+   &__image {
+      @include flex(0 0 calc((520/1112)*100%));
+      padding: 0 0 calc((574/1112)*100%) 0;
+      align-self: start;
+      @media (max-width:830px){
+         position: absolute;
+         top: 0;
+         right: 0;
+         opacity: 0.3;
+         height: 90%;
+         width: 60%;
+         z-index: -1;
+      }
+      @media (max-width:830px){
+         opacity: 0.1;
+      }
+      &_2{
+         @include flex(0 0 calc((535/1112)*100%));
+         padding: 0 0 calc((521/1112)*100%) 0;
+         @media (max-width:830px){
+          left: 0;
+         }
+      }
+      &_3{
+         @include flex(0 0 calc((542/1112)*100%));
+         padding: 0 0 calc((609/1112)*100%) 0;
+      
+      }
+    
+   }
+
+   
+p{
+   margin: 0 0 25px 0;
+}
+   }
+.first{
+   margin: 0 0 30px 0;
+}
+
+.content {
+   @media (max-width:830px){
+      max-width: 500px;
+       }
+   &_2{
+      padding: 50px 0 0 0;
+      @media (max-width:830px){
+         margin: 0 0 0 auto;
+          }
+   }
+   &_3{
+     
+   }
+   &__title {
+      text-align: left;
+      margin: 0 0 22px 0;
+   }
+
+   
+
+   h4{
+      font-weight: 700;
+      color: #2F281E;
+      margin: 0 0 12px 0;
+   }
+
+   &__list li{
+      padding: 0 0 0 65px;
+      margin: 0 0 30px 0;
+      position: relative;
+      max-width: 450px;
+      &:first-child{
+         max-width: 430px;
+
+      }
+   }
+   &__list li::before{
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 41px;
+      width: 35px;
+      
+      background: url(../img/icons/mark.png) 0 6px/contain  no-repeat;
+   }
+}
+.text {
+}
+
+.ibg {
+}
+
 
 
 
